# ghost

./: .editorconfig  .gitignore  .gitmodules  .releaserc.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  lefthook.yml  llms.txt  package-lock.json  package.json  release-please-config.json  vite.config.ts
.claude/agents/: website-expert.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  copilot-instructions.md  dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  website-maintenance.yml
.github/actions/stub-pro/: action.yml
.github/agents/: website-maintainer.agent.md
.github/workflows/: ci.yml  claude-agent.yml  claude-docs-sync.yml  ghost.yml  labeler.yml  release.yml  stale.yml  website-deploy.yml  website-maintenance.yml
branding/: BRAND_GUIDELINES.md
branding/scripts/: generate-icons.sh
pro/: Cargo.toml
pro/src/: lib.rs
pro/src/encryption/: mod.rs
pro/src/sync/: mod.rs
public/: site.webmanifest
scripts/: setup-updater-keys.sh  sync-website-content.mjs  update-versions.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml  config.toml
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/src/: error.rs  extensions.rs  lib.rs  settings.rs
src-tauri/src/agent/: config.rs  executor.rs  memory.rs  mod.rs  safety.rs  skills.rs  tools.rs
src-tauri/src/chat/: inference.rs  mod.rs  models.rs  native.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/embeddings/: hardware.rs  mod.rs  native.rs  ollama.rs
src-tauri/src/indexer/: chunker.rs  extractor.rs  mod.rs  watcher.rs
src-tauri/src/protocols/: a2a.rs  a2ui.rs  agui.rs  mcp_catalog.rs  mcp_client.rs  mcp_server.rs  mod.rs  runtime_bootstrap.rs
src-tauri/src/search/: mod.rs  ranking.rs
src/components/: A2UIRenderer.tsx  ChatMessages.tsx  ChatPanel.tsx  DebugPanel.tsx  DownloadProgress.tsx  ErrorBoundary.tsx  GhostInput.tsx  McpAppStore.tsx  Onboarding.tsx  ResultItem.tsx  ResultsList.tsx  SearchBar.tsx  Settings.tsx  StatusBar.tsx  UpdateNotification.tsx
src/hooks/: useAgui.ts  useHotkey.ts  usePlatform.ts  useSearch.ts  useUpdater.ts
src/lib/: detectMode.ts  tauri.ts  types.ts
src/styles/: globals.css
website/: astro.config.mjs  package-lock.json  package.json
website/public/: robots.txt
website/src/: content.config.ts
website/src/content/docs/: index.mdx
website/src/content/docs/architecture/: database.md  embeddings.md  multiplatform.md  overview.md
website/src/content/docs/features/: agent.md  chat.md  native-ai.md  protocols.md  search.md  skills.md
website/src/content/docs/guides/: installation.md  introduction.md  quickstart.md
website/src/content/docs/reference/: changelog.md  contributing.md  privacy.md  roadmap.md
website/src/styles/: custom.css
