[package]
name = "ghost"
version = "0.3.0"
description = "Private Local AI Superpowers for Your OS"
authors = ["Ghost Contributors <https://github.com/ghostapp-ai>"]
license = "MIT"
repository = "https://github.com/ghostapp-ai/ghost"
homepage = "https://github.com/ghostapp-ai/ghost"
edition = "2021"
rust-version = "1.80"

[lib]
name = "ghost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# GPU features for llama.cpp chat inference (runtime auto-detection)
vulkan = ["llama-cpp-2/vulkan"]
metal = ["llama-cpp-2/metal", "candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["llama-cpp-2/cuda", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
# Candle-only features (embeddings)
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
pro = ["dep:ghost-pro"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }

# Async
tokio = { version = "1", features = ["full"] }

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# Text extraction
lopdf = "0.39"
calamine = "0.33"

# HTTP client (for Ollama)
reqwest = { version = "0.13", features = ["json"] }

# Vector search
sqlite-vec = "0.1.7-alpha.10"

# DOCX extraction
zip = { version = "7", default-features = false, features = ["deflate"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Native AI — Chat inference (llama.cpp, runtime GPU auto-detection)
llama-cpp-2 = "0.1"

# Native AI — Embeddings (Candle BERT, kept for all-MiniLM-L6-v2)
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.4"
tokenizers = "0.22"
encoding_rs = "0.8"

# Utilities
sha2 = "0.10"
hex = "0.4"
dirs = "6"
chrono = "0.4"
tauri-plugin-global-shortcut = "2.3.1"

# Pro features (optional — requires ghost-pro submodule)
ghost-pro = { path = "../pro", optional = true }
